Fix credentials vertical alignment

--- a/cms/static/sass/views/_video-upload.scss
+++ b/cms/static/sass/views/_video-upload.scss
@@ -87,7 +87,7 @@
         margin-top: ($baseline*1.6);
         .org-credentials-wrapper input {
           width: 65%;
-          margin: ($baseline*0.8) 0;
+          margin-top: ($baseline*0.8);
           display: inline-block;
         }
         .action-update-org-credentials {
